Tue May 30 10:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/NodeManager/MonitorController.cpp:
          Fixed typo
	  
Tue May 30 06:16:58 UTC 2006  Boris Kolpackov  <boris@kolpackov.net>

        * tools/Config_Handlers/XSCRT/Elements.hpp:

          Added a fix for Sun C++ <= 5.7 template instantiation issue.
	  
Tue May 30 00:00:22 UTC 2006  Stoyan Paunov  <spaunov@isis.vanderbilt.edu>

        * DAnCE/Planner/Node_T.h:
        * DAnCE/Planner/Node_T.inl:
        * DAnCE/Planner/Node_T.cpp:
        * DAnCE/Planner/PCVisitor.h:
        * DAnCE/Planner/PCVisitor.cpp:
        * DAnCE/Planner/PCVisitorBase.h:
        * DAnCE/Planner/PCVisitorBase.inl:
        * DAnCE/Planner/PCVisitorBase.cpp:
        * DAnCE/Planner/Planner.mpc:
        * DAnCE/Planner/Planner.cpp:

          Checking in the Planner for DAnCE which creates a Deployment
          Plan on the fly (in-memory).

        * RACE/Input_Adapters/LocationUpdater/Injector.cpp:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater.cdp:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater.cidl:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater.idl:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater_deployment.dat:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater_exec.h:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater_exec.cpp:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater_exec_export.h:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater_stub_export.h:
        * RACE/Input_Adapters/LocationUpdater/LocationUpdater_svnt_export.h:
        * RACE/Input_Adapters/LocationUpdater/Location_Updater.mpc.disable:
        * RACE/Input_Adapters/LocationUpdater/PCVisitorBase.h:
        * RACE/Input_Adapters/LocationUpdater/PCVisitorBase.inl:
        * RACE/Input_Adapters/LocationUpdater/PCVisitorBase.cpp:
        * RACE/Input_Adapters/LocationUpdater/PlanUpdater.h: