@@ -1,3 +1,9 @@
+Wed May 31 16:49:12 UTC 2006  jiang,shanshan <shanshan.jiang@vanderbilt.edu>
+
+        * DAnCE/RepositoryManager/RepositoryManager_Impl.cpp
+
+          Made some minor changes.
+
 Tue May 30 10:08:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/NodeManager/MonitorController.cpp:
